--- a/static/index.html
+++ b/static/index.html
@@ -473,8 +473,8 @@
                     </div>
                     <div class="info-message" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; background-color: #f8f9fa; border-left: 4px solid #4285f4; font-size: 0.9rem;">
                         <strong>Note:</strong> Your policy server must respond to POST requests at <code>/act</code> endpoint and return an action with shape <code>(7,)</code>.
-                        The server will be automatically tested as you submit your job. See <a href="https://gist.github.com/auto-eval/b7c3d7550786a8a9e858c3732bbc776a" target="_blank">here</a> for an example policy server.
-                        We recommend sanity checking your policy with the <a href="https://github.com/auto-eval/mse-check" target="_blank">action MSE test</a> before submitting an evaluation job.
+                        The server will be automatically tested as you submit your job. See <a href="https://gist.github.com/zhouzypaul/8ba0123b2931a7295a00eaa09dd540cd" target="_blank">here</a> for an example policy server.
+                        We recommend sanity checking your policy with the <a href="https://github.com/zhouzypaul/mse-check" target="_blank">action MSE test</a> before submitting an evaluation job.
                     </div>
                     <div id="robot-status-note" class="info-message" style="margin-bottom: 20px; padding: 10px; background-color: #fff5f5; border-left: 4px solid #dc2626; font-size: 0.9rem; display: none;"></div>
                     <div class="form-group">
