update openvla_server with dummy reset endpoint

--- a/static/index.html
+++ b/static/index.html
@@ -469,7 +469,7 @@
                     </div>
                     <div class="form-group">
                         <label for="policy_server_port">Policy Server Port</label>
-                        <input type="number" id="policy_server_port" name="policy_server_port" required placeholder="Enter policy server port">
+                        <input type="number" id="policy_server_port" name="policy_server_port" required placeholder="Enter policy server port (use -1 if no port is needed)">
                     </div>
                     <div class="info-message" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; background-color: #f8f9fa; border-left: 4px solid #4285f4; font-size: 0.9rem;">
                         <strong>Note:</strong> Your policy server must respond to POST requests at <code>/act</code> endpoint and return an action with shape <code>(7,)</code>.
